@@ -14,14 +14,17 @@
  * limitations under the License.
  */
 
+import Utils.Companion.testLogger
 import Utils.Companion.versionTxt
 import com.adarshr.gradle.testlogger.theme.ThemeType
 import com.autonomousapps.AbstractExtension
 import com.autonomousapps.DependencyAnalysisSubExtension
+import com.hedera.hashgraph.gradlebuild.service.TaskLockService
 
 plugins {
     id("java")
     id("jacoco")
+    id("checkstyle")
     id("com.adarshr.test-logger")
     id("com.hedera.hashgraph.jpms-modules")
     id("com.hedera.hashgraph.jpms-module-dependencies")
@@ -39,8 +42,8 @@ java {
     targetCompatibility = JavaVersion.VERSION_21
 
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(21))
-        vendor.set(JvmVendorSpec.ADOPTIUM)
+        languageVersion = JavaLanguageVersion.of(21)
+        vendor = JvmVendorSpec.ADOPTIUM
     }
 }
 
@@ -49,17 +52,17 @@ configurations.all {
     resolutionStrategy.preferProjectModules()
 }
 
-val internal: Configuration =
-    configurations.create("internal") {
-        isCanBeConsumed = false
-        isCanBeResolved = false
-    }
+@Suppress("UnstableApiUsage") val internal = configurations.dependencyScope("internal")
+
+javaModuleDependencies { versionsFromConsistentResolution(":app") }
+
+configurations.getByName("mainRuntimeClasspath") { extendsFrom(internal.get()) }
 
 dependencies { "internal"(platform("com.hedera.hashgraph:hedera-dependency-versions")) }
 
 sourceSets.all {
-    configurations.getByName(compileClasspathConfigurationName) { extendsFrom(internal) }
-    configurations.getByName(runtimeClasspathConfigurationName) { extendsFrom(internal) }
+    configurations.getByName(compileClasspathConfigurationName) { extendsFrom(internal.get()) }
+    configurations.getByName(runtimeClasspathConfigurationName) { extendsFrom(internal.get()) }
 
     dependencies {
         // For dependencies of annotation processors use versions from 'hedera-dependency-versions',
@@ -95,7 +98,7 @@ val writeGitProperties =
                 .map { it.trim().substring(0, 7) }
         )
 
-        destinationFile.set(layout.buildDirectory.file("generated/git/git.properties"))
+        destinationFile = layout.buildDirectory.file("generated/git/git.properties")
     }
 
 tasks.processResources { from(writeGitProperties) }
@@ -141,73 +144,89 @@ tasks.withType<JavaCompile>().configureEach {
 }
 
 tasks.withType<Javadoc>().configureEach {
-    options.encoding = "UTF-8"
-    (options as StandardJavadocDocletOptions).tags(
-        "apiNote:a:API Note:",
-        "implSpec:a:Implementation Requirements:",
-        "implNote:a:Implementation Note:"
-    )
+    options {
+        this as StandardJavadocDocletOptions
+        encoding = "UTF-8"
+        tags(
+            "apiNote:a:API Note:",
+            "implSpec:a:Implementation Requirements:",
+            "implNote:a:Implementation Note:"
+        )
+    }
 }
 
 testing {
     @Suppress("UnstableApiUsage")
     suites {
-        // Configure the normal unit test suite to use JUnit Jupiter.
         named<JvmTestSuite>("test") {
-            // Enable JUnit as our test engine
             useJUnitJupiter()
             targets.all {
                 testTask {
-                    options {
-                        this as JUnitPlatformOptions
-                        excludeTags(
-                            "TIME_CONSUMING",
-                            "AT_SCALE",
-                            "REMOTE_ONLY",
-                            "HAMMER",
-                            "PERFORMANCE",
-                            "PROFILING_ONLY",
-                            "INFREQUENT_EXEC_ONLY"
-                        )
-                    }
-                    // Increase the heap size for the unit tests
-                    maxHeapSize = "4096m"
-                    jvmArgs("-XX:ActiveProcessorCount=7")
-                    // Can be useful to set in some cases
-                    // testLogging.showStandardStreams = true
+                    maxHeapSize = "4g"
+                    // Some tests overlap due to using the same temp folders within one project
+                    // maxParallelForks = 4 <- set this, once tests can run in parallel
                 }
             }
+        }
 
-            // Add 'targets' (tasks of type Test) for the 'test' test suite: 'hammerTest' and
-            // 'performanceTest'.  Gradle's test suite API does not yet allow to add additional
-            // targets there (although it's planned).
-            // Thus, we use 'tasks.register' and set 'testClassesDirs' and 'sources' to the
-            // information we get from the 'source set' (sources) of this 'test suite'.
-            tasks.register<Test>("hammerTest") {
-                testClassesDirs = sources.output.classesDirs
-                classpath = sources.runtimeClasspath
-
-                shouldRunAfter(tasks.test)
-
-                useJUnitPlatform { includeTags("HAMMER") }
-                maxHeapSize = "8g"
-                jvmArgs("-XX:ActiveProcessorCount=7")
-            }
-
-            tasks.register<Test>("performanceTest") {
-                testClassesDirs = sources.output.classesDirs
-                classpath = sources.runtimeClasspath
-
-                shouldRunAfter(tasks.test)
-
-                useJUnitPlatform {
-                    includeTags("TIME_CONSUMING", "AT_SCALE", "REMOTE_ONLY", "PERFORMANCE")
+        // Test functionally correct behavior under stress/loads with many repeated iterations.
+        register<JvmTestSuite>("hammer") {
+            testType.set("hammer")
+            targets.all {
+                testTask {
+                    shouldRunAfter(tasks.test)
+                    usesService(
+                        gradle.sharedServices.registerIfAbsent("lock", TaskLockService::class) {
+                            maxParallelUsages = 1
+                        }
+                    )
+                    maxHeapSize = "8g"
                 }
+            }
+        }
 
-                setForkEvery(1)
-                minHeapSize = "2g"
-                maxHeapSize = "16g"
-                jvmArgs("-XX:ActiveProcessorCount=7", "-XX:+UseZGC")
+        // Tests that normally needs more than 100 ms to be executed.
+        register<JvmTestSuite>("timeConsuming") {
+            testType.set("time-consuming")
+            targets.all {
+                testTask {
+                    shouldRunAfter(tasks.test)
+                    maxHeapSize = "16g"
+                }
+            }
+        }
+
+        // integration test suite
+        register<JvmTestSuite>("itest") {
+            testType.set(TestSuiteType.INTEGRATION_TEST)
+            targets.all {
+                testTask {
+                    shouldRunAfter(tasks.test)
+                    maxHeapSize = "8g"
+                    addTestListener(testLogger())
+                }
+            }
+        }
+
+        // EET for end-to-end tests
+        register<JvmTestSuite>("eet") {
+            testType.set("end-to-end-test")
+            targets.all {
+                testTask {
+                    shouldRunAfter(tasks.test)
+                    maxHeapSize = "8g"
+                }
+            }
+        }
+
+        // "cross-service" tests (this suite will be removed)
+        register<JvmTestSuite>("xtest") {
+            testType.set("cross-service-test")
+            targets.all {
+                testTask {
+                    shouldRunAfter(tasks.test)
+                    maxHeapSize = "8g"
+                }
             }
         }
     }
@@ -216,17 +235,9 @@ testing {
 tasks.jacocoTestReport {
     // Configure Jacoco so it outputs XML reports (needed by SonarCloud)
     reports {
-        xml.required.set(true)
-        html.required.set(true)
+        xml.required = true
+        html.required = true
     }
-
-    // Pick up results that have been produced by any of the 'Test' tasks,
-    // in this or previous build runs, to combine them in one report
-    val allTestTasks = tasks.withType<Test>()
-    executionData.from(
-        allTestTasks.map { it.extensions.getByType<JacocoTaskExtension>().destinationFile }
-    )
-    shouldRunAfter(allTestTasks)
 }
 
 testlogger {
@@ -243,12 +254,14 @@ testlogger {
 tasks.assemble {
     // 'assemble' compiles all sources, including all test sources
     dependsOn(tasks.testClasses)
+    dependsOn(tasks.named("hammerClasses"))
+    dependsOn(tasks.named("timeConsumingClasses"))
+    dependsOn(tasks.named("itestClasses"))
+    dependsOn(tasks.named("eetClasses"))
+    dependsOn(tasks.named("xtestClasses"))
 }
 
-tasks.check {
-    // 'check' runs all checks, including all test checks
-    dependsOn(tasks.jacocoTestReport)
-}
+tasks.check { dependsOn(tasks.jacocoTestReport) }
 
 // Do not report dependencies from one source set to another as 'required'.
 // In particular, in case of test fixtures, the analysis would suggest to
@@ -259,4 +272,22 @@ val dependencyAnalysis = extensions.findByType<AbstractExtension>()
 
 if (dependencyAnalysis is DependencyAnalysisSubExtension) {
     dependencyAnalysis.issues { onAny { exclude(project.path) } }
+}
+
+checkstyle { toolVersion = "10.12.7" }
+
+tasks.withType<Checkstyle>().configureEach {
+    reports {
+        xml.required = true
+        html.required = true
+        sarif.required = true
+    }
+}
+
+// Remove below configuration once all 'TIME_CONSUMING' tests are moved to 'src/timeConsuming'.
+tasks.test {
+    options {
+        this as JUnitPlatformOptions
+        excludeTags("TIME_CONSUMING")
+    }
 }
